# warnoMod

./: .gitattributes  .gitignore  Changelog.md  README.md  README_zh.md
utils/: langTest.ndf  utilsFileStruc.md  (+1 more)
utils/ndf/cpp/: CMakeLists.txt  Doxyfile  USReflTest.cpp  classInheritance.dot  main.cpp  test.cpp
utils/ndf/cpp/docs/en/: annotated.html  antlr.html  ast_8cpp.html  ast_8cpp__incl.map  ast_8cpp__incl.md5  ast_8h.html  ast_8h.js  ast_8h__dep__incl.map  ast_8h__dep__incl.md5  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_source.html  bnf.html  build_8cpp.html  build_8cpp__incl.map  build_8cpp__incl.md5  build_8cpp_a5d2adbf158d596abdc2b780ae2604cff_cgraph.map  build_8cpp_a5d2adbf158d596abdc2b780ae2604cff_cgraph.md5  class_expection-members.html  class_expection.html  class_expection__coll__graph.map  class_lexer-members.html  class_lexer.html  class_lexer.js  class_lexer__coll__graph.map  class_lexer_a19d3c701df7e890bb78924e341c73a6d_icgraph.map  class_lexer_a19d3c701df7e890bb78924e341c73a6d_icgraph.md5  class_lexer_a26712ee1e6617c2fead62c9f42117793_cgraph.map  class_lexer_a26712ee1e6617c2fead62c9f42117793_cgraph.md5  class_lexer_a26712ee1e6617c2fead62c9f42117793_icgraph.md5  class_lexer_a2d03a1b0a7f8489eb6fc33c06068323d_cgraph.md5  class_lexer_a2d03a1b0a7f8489eb6fc33c06068323d_icgraph.md5  class_lexer_a3b5b7bfdea126bc29300c8916491adce_cgraph.md5  class_lexer_a3b5b7bfdea126bc29300c8916491adce_icgraph.map  class_lexer_a3b5b7bfdea126bc29300c8916491adce_icgraph.md5  class_lexer_a51977199e3e0b0846bad90622333da40_icgraph.md5  class_lexer_a7cac296497417d099f2d1baf98f3bee8_cgraph.map  class_lexer_a7cac296497417d099f2d1baf98f3bee8_cgraph.md5  class_lexer_a89bee08cdd814bbb98d60a8abbc16245_cgraph.md5  class_lexer_a89bee08cdd814bbb98d60a8abbc16245_icgraph.map  (+398 more)
utils/ndf/cpp/docs/en/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  (+24 more)
utils/ndf/cpp/docs/zh/: annotated.html  annotated_dup.js  antlr.html  ast_8cpp.html  ast_8cpp__incl.map  ast_8cpp__incl.md5  ast_8h.html  ast_8h__dep__incl.map  ast_8h__dep__incl.md5  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_source.html  bnf.html  build_8cpp.html  build_8cpp.js  build_8cpp__incl.map  build_8cpp__incl.md5  build_8cpp_a6eb2189e89fae6e820ebab24a41cc832_icgraph.map  build_8cpp_a6eb2189e89fae6e820ebab24a41cc832_icgraph.md5  class_expection-members.html  class_expection.html  class_expection.js  class_expection__coll__graph.md5  class_expection__inherit__graph.map  class_expection__inherit__graph.md5  class_lexer-members.html  class_lexer.html  class_lexer__coll__graph.md5  class_lexer_a26712ee1e6617c2fead62c9f42117793_icgraph.map  class_lexer_a2d03a1b0a7f8489eb6fc33c06068323d_cgraph.map  class_lexer_a2d03a1b0a7f8489eb6fc33c06068323d_icgraph.map  class_lexer_a3b5b7bfdea126bc29300c8916491adce_cgraph.map  class_lexer_a51977199e3e0b0846bad90622333da40_cgraph.map  class_lexer_a51977199e3e0b0846bad90622333da40_cgraph.md5  class_lexer_a51977199e3e0b0846bad90622333da40_icgraph.map  class_lexer_a7cac296497417d099f2d1baf98f3bee8_icgraph.map  class_lexer_a7cac296497417d099f2d1baf98f3bee8_icgraph.md5  class_lexer_a89bee08cdd814bbb98d60a8abbc16245_cgraph.map  class_lexer_a89bee08cdd814bbb98d60a8abbc16245_icgraph.md5  class_lexer_a8d2585d70adce01584a505a25c3e179d_cgraph.map  (+394 more)
utils/ndf/cpp/docs/zh/search/: all_1.js  all_13.js  all_14.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_3.js  classes_4.js  classes_7.js  classes_d.js  enums_0.js  enums_1.js  enumvalues_3.js  enumvalues_6.js  files_1.js  files_2.js  files_7.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_c.js  functions_d.js  groups_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js  (+2 more)
utils/ndf/cpp/include/: confunc.h
utils/ndf/cpp/lib/: Debugger_st_MSVC_debug.lib  confunc_st_MSVC.lib  confunc_st_MSVC_debug.lib  debugger_st_MSVC.lib
utils/ndf/cpp/nodeAPI/: CMakeLists.txt  build.cpp  build.h  build.ps1  package.json  pnpm-lock.yaml  tsconfig.json
utils/ndf/cpp/nodeAPI/ndfNodeAPI/: package.json
utils/ndf/cpp/nodeAPI/ndfNodeAPI/src/: ndfNodeAPI.d.ts  ndfNodeAPI.node
utils/ndf/cpp/nodeAPI/node/: ndfNodeAPI.node  test.js  test.ndf
utils/ndf/cpp/nodeAPI/src/: CMakeLists.txt  build.cpp  build.h  build.ps1
utils/ndf/cpp/nodeAPI/test/: test.ndf  test.ts
utils/ndf/cpp/pyAPI/: CMakeLists.txt  build.cpp
utils/ndf/cpp/src/: expection.h  reflection.h  utils.cpp  utils.h  utils.hpp
utils/ndf/cpp/src/lexer/: lexer.cpp  lexer.h  token.h  tokenProc.cpp
utils/ndf/cpp/src/parser/: ast.cpp  ast.h  parser.cpp  parser.h
(+53 files in other folders)
